--- a/index.html
+++ b/index.html
@@ -306,10 +306,15 @@
     </style>
 </head>
 <body>
-    <div class="header">
-        <h1>韩枫BP模拟器V.1.5</h1>
-        <div class="author">作者：@韩枫有点帅</div>
+  <div class="header">
+    <h1>韩枫BP模拟器V.1.5</h1>
+    <div class="author">
+        作者：<a href="https://space.bilibili.com/298187937?spm_id_from=333.337.0.0" target="_blank" 
+              style="color: white; text-decoration: underline; cursor: pointer;">
+             @韩枫有点帅
+         </a>
     </div>
+</div>
     
     <div class="container">
         <div class="red-side">
