--- a/index.html
+++ b/index.html
@@ -306,15 +306,10 @@
     </style>
 </head>
 <body>
-  <div class="header">
-    <h1>韩枫BP模拟器V.1.5</h1>
-    <div class="author">
-        作者：<a href="https://space.bilibili.com/298187937?spm_id_from=333.337.0.0" target="_blank" 
-              style="color: white; text-decoration: underline; cursor: pointer;">
-             @韩枫有点帅
-         </a>
+    <div class="header">
+        <h1>韩枫BP模拟器V.1.5</h1>
+        <div class="author">作者：@韩枫有点帅</div>
     </div>
-</div>
     
     <div class="container">
         <div class="red-side">
@@ -984,5 +979,11 @@
         // 启动系统
         init();
     </script>
+
+    <!-- 新增的底部链接（固定在页面正下方，蓝色带下划线） -->
+    <div style="position: fixed; bottom: 10px; left: 0; right: 0; text-align: center; padding: 10px 0; background: rgba(255,255,255,0.8); z-index: 999;">
+        <a href="https://wiki.52poke.com/wiki/" target="_blank" style="text-decoration: underline; color: blue; margin: 0 15px;">神奇宝贝百科（点击跳转）</a>
+        <a href="https://dex.pokemonshowdown.com/" target="_blank" style="text-decoration: underline; color: blue; margin: 0 15px;">pokedex（点击跳转）</a>
+    </div>
 </body>
 </html>
