--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>韩枫BP模拟器v1.5</title>
+    <title>hanfeng-bp-emulator</title>
     <style>
         /* 基础样式 */
         body {
