--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>hanfeng-bp-emulator</title>
-    <link rel="icon" href="icon.ico" type="image/x-icon">
+    <link rel="icon" href="tubiao.ico" type="image/x-icon">
     <style>
         /* 基础样式 */
         body {
