--- a/index.html
+++ b/index.html
@@ -395,9 +395,9 @@
             </div>
             <div class="card-pool"></div>
             <div class="mark-btns">
-                <button class="btn mark-yellow" id="markYellowBtn">标黄</button>
-                <button class="btn mark-purple" id="markPurpleBtn">标紫</button>
-                <button class="btn mark-green" id="markGreenBtn">标绿</button>
+                <button class="btn mark-yellow" id="markYellowBtn">传说</button>
+                <button class="btn mark-purple" id="markPurpleBtn">史诗</button>
+                <button class="btn mark-green" id="markGreenBtn">稀有</button>
                 <button class="btn clear-marks" id="clearMarksBtn">撤销</button>
             </div>
         </div>
